--- a/submissionStyle.css
+++ b/submissionStyle.css
@@ -7,8 +7,8 @@ main {
         'main1 main2 sidebar'
         'main3 main4 sidebar'
         'main5 main6 .';
-        padding-top: 50px;
-        grid-template-columns: 1fr 1fr 425px;
+        padding: 50px;
+        grid-template-columns: 1fr 1fr 470px;
         gap: 50px;
 }
 h1 {
@@ -17,6 +17,13 @@ h1 {
 }
 .form {
     grid-area: sidebar;
+    flex-direction: column;
+    row-gap: 15px;
+    border-radius: 8px;
+    background-color: var(--dark_Blue);
+    align-items: center;
+    color: white;
+    height: 575px;
 }
 .photo1 {
     grid-area: main1;
@@ -36,20 +43,12 @@ h1 {
 .photo6 {
     grid-area: main6;
 }
-.form {
-    grid-area: sidebar;
-    flex-direction: column;
-    row-gap: 15px;
-    border-radius: 8px;
-    background-color: var(--dark_Blue);
-    padding: 10px 0 30px;
-}
 .discription {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
 }
+
 /* CSS DETAILS */ 
 
 h1, .form {
@@ -57,8 +56,8 @@ h1, .form {
 }
 
 .form button {
-    padding: 14px 30px;
-    border: solid 2px var(--Neon_Blue);
+    padding: 14px 40px;
+    border: solid 3px var(--Neon_Blue);
     color: var(--Neon_Blue);
     border-radius: 60px;
     font-size: 36px;
@@ -67,20 +66,14 @@ h1, .form {
     margin-top: 20px;
 }
 
-.photo1, .photo3, .photo5, header {
-    margin-left: 30px;
-}
-
-.form {
-    margin-right: 30px;
-    align-items: center;
-    color: white;
-    
-}
-
 .form input {
     border-radius: 5px;
     padding: 10px 0;
     color: var(--gray);
     width: 80%;
+}
+
+img {
+    width: 100%;
+    height: 90%;
 }
